# wisp-science

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  README_zh.md
.cargo/: config.toml
.github/release-notes/: v0.10.0.md  v0.14.0.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.17.1.md  v0.18.0.md  v0.21.0.md  v0.22.0.md  v0.3.0.md  v0.3.1.md  v0.5.0.md  v0.5.2.md  v0.7.0.md  v0.8.0.md  v0.9.1.md  v0.9.2.md
.github/workflows/: build-macos.yml  pages.yml  release-macos.yml  test.yml
browser-extension/: NOTICE.md  background.js  manifest.json  popup.html  popup.js
crates/wisp-acp/: Cargo.toml
crates/wisp-acp/src/: lib.rs
crates/wisp-acp/tests/: process.rs
crates/wisp-cli/: Cargo.toml
crates/wisp-cli/src/: main.rs
crates/wisp-core/: Cargo.toml
crates/wisp-core/src/: agent.rs  context.rs  delegation.rs  delegation_policy.rs  execution.rs  lib.rs  memory.rs  orchestration.rs  output.rs  provenance.rs  subagent.rs  system_prompt.rs
crates/wisp-llm/src/: anthropic.rs  lib.rs  message.rs  openai.rs  provider.rs  responses.rs  routed.rs
crates/wisp-mcp/: Cargo.toml
crates/wisp-mcp/examples/: smoke.rs
crates/wisp-mcp/src/: client.rs  lib.rs  tool.rs
crates/wisp-paths/src/: lib.rs
crates/wisp-python/src/: env.rs  kernel.rs  tool.rs
crates/wisp-runtime/: Cargo.toml
crates/wisp-runtime/src/: env.rs  kernel.rs  lib.rs  manager.rs  tool.rs
crates/wisp-skills/src/: index.rs  lib.rs  tool.rs
crates/wisp-store/: Cargo.toml
crates/wisp-store/migrations/: 0000_init.sql  0014_agent_workflows.sql  0015_agent_workflow_contracts.sql  0019_agent_workflow_deliveries.sql  0021_plugin_installations.sql
crates/wisp-store/src/: acp_sessions.rs  agent_workflow_attempts.rs  agent_workflow_deliveries.rs  agent_workflows.rs  artifacts.rs  codex_imports.rs  execution_contexts.rs  external_session_cache.rs  lab.rs  lib.rs  library.rs  models.rs  plugins.rs  project_sync.rs  project_transfer.rs  projects.rs  provenance.rs  research.rs  resources.rs  runs.rs  secrets.rs  sessions.rs  store_tests.rs
crates/wisp-sync/: Cargo.toml
crates/wisp-sync/src/: crypto.rs  http.rs  lib.rs  protocol.rs  relay.rs
crates/wisp-tools/src/: attempt_completion.rs  edit.rs  env.rs  grep.rs  image.rs  lib.rs  plan.rs  process.rs  read.rs  safety.rs  search.rs  shell.rs  tool.rs  write.rs
docs/: acp-agents.md  agent-delegation.md  channels.md  claude-science-repro.md  feature-plugins.md  global-library.md  index.html  model-configuration.html  model-configuration.md  pet.md  project-sync.md  project-sync.zh-CN.md  project-transfer.md  real-browser-automation.md  remote-file-browser.md  server-transfers.md  terminal-sessions.md  ui-design-principles.md
docs/assets/: main.js  styles.css
docs/superpowers/plans/: 2026-07-03-project-workspace-management.md  2026-07-03-ssh-host-registry.md  2026-07-04-settings-skills-mcp-connections.md  2026-07-05-artifact-provenance.md  2026-07-07-session-export.md  2026-07-08-codex-execution-roadmap.md  2026-07-08-plan-approval-other-feedback.md  2026-07-09-specialists.md  2026-07-10-composer-references-and-command-palette.md  2026-07-11-acp-client-integration.md  2026-07-20-dynamic-agent-delegation.md
docs/superpowers/specs/: 2026-07-03-project-workspace-management-design.md  2026-07-03-ssh-host-registry-design.md  2026-07-04-settings-skills-mcp-connections-design.md  2026-07-05-artifact-provenance-design.md  2026-07-07-session-export-design.md  2026-07-08-research-workbench-control-plane.md  2026-07-09-specialists-design.md  2026-07-10-onboarding-api-key-design.md  (+3 more)
python/: kernel_worker.py  test_kernel_worker.py
r/: kernel_worker.R
skills/: THIRD_PARTY_LICENSES.md
skills/agent-infini/: SKILL.md
skills/bear-counter/: SKILL.md
skills/bear-map/: SKILL.md
skills/bear-onboard/: SKILL.md
skills/bear-propose/: SKILL.md
skills/bear-review/: SKILL.md
skills/bear-scoop/: SKILL.md
skills/bear-support/: SKILL.md
skills/bear-trace/: SKILL.md
skills/compute-env-setup/: SKILL.md
skills/customize/: SKILL.md
skills/literature-review/: kernel.py
skills/local-env-setup/: SKILL.md
skills/pdf-explore/: SKILL.md  kernel.py
skills/remote-compute-ssh/: SKILL.md
skills/self-awareness/: SKILL.md
src-tauri/: Cargo.toml  gen-icons.ps1  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  pet.json  terminal.json
src-tauri/icons/: icon.icns
src-tauri/src/: acp.rs  app_commands.rs  approval_commands.rs  artifact_commands.rs  browser_bridge.rs  codex_import.rs  codex_runtime.rs  codex_tool.rs  connector_commands.rs  context_probe.rs  debug_request.rs  delegation_completion.rs  delegation_isolation.rs  delegation_resources.rs  delegation_runtime.rs  delegation_tool.rs  desktop_lifecycle.rs  dynamic_workflow.rs  file_browser.rs  harvest.rs  lab.rs  lib.rs  lib_tests.rs  library_commands.rs  local_runner.rs  main.rs  mcp_bridge.rs  mcp_oauth.rs  memory_commands.rs  models.rs  native_delegation.rs  pet_commands.rs  plugins.rs  project_commands.rs  project_reader.rs  project_sync.rs  project_transfer.rs  research_graph.rs  resource_refs.rs  review.rs  (+16 more)
src-tauri/src/channels/: feishu.rs  mod.rs  pbbp2.rs  weixin.rs
src-tauri/src/run_context/: remote.rs  tests.rs  tools.rs  transfer.rs
ui/: Cargo.toml  Trunk.toml  build.ps1  dev.ps1  index.html  mock-bridge.js  preview.html  styles.css  sync-vendor.ps1  terminal.html
ui-tests/: package-lock.json  package.json  playwright.config.ts
ui-tests/tests/: build-config.spec.ts  mock-tauri.ts  pptx-preview-width.spec.ts  ui.spec.ts
ui/src/: agent_workflows.rs  api.js  app_support.rs  bindings.rs  channels_view.rs  context_menu.js  context_menu.rs  dto.rs  highlight.js  i18n.rs  library.rs  main.rs  marks.js  notebook.rs  overlays.rs  pet.js  pet.rs  project_landing.rs  scroll.js  settings_view.rs  sidebar.rs  terminal.js  text.rs  window_titlebar.rs
ui/src/styles/: alignment.css  base.css  chat.css  explorer.css  modals.css  overlay.css  pet.css  projects.css  right-pane.css  settings.css  sidebar.css  terminal-dock.css  terminal.css
(+6 files in other folders)
