[package]
name = "wisp-tauri"
description = "Tauri v2 desktop shell for wisp-science: commands + agent event stream."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wisp-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = "5"
reqwest = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
glob = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
base64 = { workspace = true }
portable-pty = { workspace = true }
async-trait = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
wisp-core = { workspace = true }
wisp-llm = { workspace = true }
wisp-skills = { workspace = true }
wisp-store = { workspace = true }
wisp-runtime = { workspace = true }
wisp-mcp = { workspace = true }
wisp-acp = { workspace = true }
wisp-paths = { workspace = true }
wisp-sync = { workspace = true }
wisp-tools = { workspace = true }
