[package]
name = "wisp-ui"
description = "wisp-science desktop UI (Leptos CSR, built by Trunk, loaded in the Tauri WebView2)."
version = "0.22.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "wisp-ui"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.6", features = ["csr", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Event", "EventTarget", "KeyboardEvent", "MouseEvent", "WheelEvent", "DragEvent", "DataTransfer", "FileList", "HtmlTextAreaElement", "HtmlInputElement", "HtmlElement", "Window", "Document", "Element", "Node", "DomTokenList", "Navigator", "Clipboard", "Selection", "Storage", "DomRect"] }
console_error_panic_hook = "0.1"
futures-channel = "0.3"

# Standalone workspace: this crate compiles to wasm32 for the Tauri WebView,
# separate from the native Cargo workspace at the repo root.
[workspace]
