[package]
name = "wisp-runtime"
description = "Managed project-scoped Python and R runtimes."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
tracing = { workspace = true }
which = "7"
uuid = { workspace = true }
wisp-llm = { workspace = true }
wisp-tools = { workspace = true }
wisp-paths = { workspace = true }
